# Diffusion-Model-Framework

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-and-release-docs.yaml  build-docs.yaml  release.yaml  run-tests.yaml
diffusion_models/: __init__.py  diffusion_inference.py  diffusion_trainer.py
diffusion_models/gaussian_diffusion/: base_diffuser.py  beta_schedulers.py  ddimm_diffuser.py  gaussian_diffuser.py
diffusion_models/models/: SimpleUnet.py  base_diffusion_model.py
diffusion_models/utils/: schemas.py  tensorboard.py
docs/source/: conf.py  index.rst
docs/source/custom/pre-modules/: introduction.md
examples/: infer.py  train_model.py
tests/gaussian_diffusion/: test_beta_schedulers.py
tests/utils/: test_schemas.py  test_tensorboard.py
